updated a couple of links

--- a/gallery.html
+++ b/gallery.html
@@ -351,13 +351,13 @@
         <br />
         Although featuring only the 6 first original levels, it reproduces almost all of the original game mechanisms, and uses mostly all the features available in melonJS !</p>
 
-        <p>Click <a href="http://melonjs.github.com/Alex4-WE/">here</a> to try it out, or check the source code <a href="https://github.com/melonjs/Alex4-WE">here</a> on Github.!</p><br />
+        <p>Click <a href="http://obiot.github.com/Alex4-WE/">here</a> to try it out, or check the source code <a href="https://github.com/obiot/Alex4-WE">here</a> on Github.!</p><br />
 
         <h3><b>Fish War !</b></h3><span class="right"><img src="media/examples/fishwar.png" alt="Fish War ! demo" /></span> A simple game where the goal is too eat as much fish as you can, while
         avoiding the jellyfish.
 
         <p><br />
-        Click <a href="http://www.melonjs.org/demos/fishwar/">here</a> to play.</p><br />
+        Click <a href="http://obiot.github.io/fishwar/">here</a> to play.</p><br />
         How much can you eat ?<br />
         <br />
         <br />
