Adding download button and view documentation buttons to the homepage.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@ title: Home
 	<h1>A lightweight 2D sprite-based HTML5 game engine</h1>
 
 	<p>melonJS is the result of our enthusiasm and past experiments with Javascript, and came from the feeling that no simple, free and standalone library was available to develop games. And although still a work in progress, melonJS already allows to easily create some nice games (see the <a href="/gallery.html">Gallery</a> page)</p>
+
+	<p>
+		<a href="/download.html" class="btn btn-primary btn-large">Download now</a>
+		<a href="/documentation" class="btn btn-large">View documenation</a>
+	</p>
 </div>
 
 <div class="row">
