--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,10 @@
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li><a href="index.html">Home</a></li>
-          <li><a href="http://olivierbiot.wordpress.com/">Blog</a></li>
+          <li><a href="http://blog.melonjs.org/">Blog</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="download.html">Download</a></li>
-		  <li><a href="http://groups.google.com/group/melonjs">Forum</a></li>
+          <li><a href="http://forum.melonjs.org">Forum</a></li>
           <li class="selected"><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
