Update a URL in the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -127,11 +127,11 @@
 		or see the <a href="https://github.com/blipjoy/alienauts">Github Repository</a> for more details and source code.</p>
 	  
 		
-		<h3><b>Simpleman</b> by Justin Oblak</h3><span class="right"><a href="http://justinoblak.com/portfolio/games/simple/index.html/"><img src="media/examples/simpleman.png" alt="simpleman" /></a></span>
+		<h3><b>Simpleman</b> by Justin Oblak</h3><span class="right"><a href="http://justinoblak.com/games/simple/index.html"><img src="media/examples/simpleman.png" alt="simpleman" /></a></span>
 
         <p>A simple 5 level platformer, featuring a sprite composition engine based off of Jason Oster's Neverwell Moor !</p>
 		
-        <p>Click <a href="http://justinoblak.com/portfolio/games/simple/index.html">here</a> to play, or check the source code <a href="https://github.com/jroblak/adventure">here</a> on Github.</p><br />
+        <p>Click <a href="http://justinoblak.com/games/simple/index.html">here</a> to play, or check the source code <a href="https://github.com/jroblak/adventure">here</a> on Github.</p><br />
 		<br />
         <br />
 		<br />
