added masterspy to the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -65,6 +65,21 @@
 
         <h2>Games</h2>
 
+        <h3><b>Master Spy</b> by TurboGun </h3><span class="right"><a href="http://masterspygame.com/"><img src="media/examples/masterspy.png" alt="MS" /></a></span>
+
+        <p>
+            Master Spy is a stealth-based precision platformer with old school cutscenes, slated for release in 2014.<br>
+            Features : <br>
+              - 50 levels across 5 unique environments, with each mission increasing in thumb-shredding difficulty.<br>
+              - Cinematic Pixel Art Cutscenes full of Action, Conspiracy, Betrayal, and Intrigue. You could skip these, but why?<br>
+              - Original Spy-Fi Soundtrack by Sferro!<br>
+		</p>
+		<p>
+			Check out the main <a href="http://masterspygame.com/"> web site</a> for more details, or click <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=199314566"> here</a> to help them get on Steam !
+           
+		</p>
+		<br>
+        
         <h3><b>Node Mayhen</b> a Node Knockout hackathon entry </h3><span class="right"><a href="http://www.felixrieseberg.com/node-mayhem/"><img src="media/examples/mayhem.png" alt="HSS" /></a></span>
 
         <p>
@@ -492,7 +507,7 @@
     <div id="content_footer"></div>
 
     <div id="footer">
-      Copyright &copy; melonJS 2012
+      Copyright &copy; melonJS 2011 - 2014
     </div>
   </div>
 </body>
