updated with the 0.9.11 version

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <h1>Contact Us</h1>
 		  <p></p>
 		  <p></p>
-        <p>You can contact us through my <a href="http://olivierbiot.wordpress.com">blog</a>, or using the following address : <a href="mailto:contact@melonjs.org">contact@melonjs.org</a></p>
+        <p>For general, non technical, inquiries about melonJS, you can contact us through the following address : <a href="mailto:contact@melonjs.org">contact@melonjs.org</a></p>
 		  <p></p>
 		<h1>Donation</h1>
 		  <p>
@@ -72,7 +72,7 @@
     </div>
    <div id="content_footer"></div>
     <div id="footer">
-      Copyright &copy; melonJS 2011-2013</a>
+      Copyright &copy; melonJS 2011 - 2014
     </div>
   </div>
 </body>
