--- a/download.html
+++ b/download.html
@@ -50,7 +50,7 @@
       <div id="content">
         <!-- insert the page content here -->
         <h2>Terms of use</h2>
-        Copyright (C) 2011 - 2013, Olivier Biot, Jason Oster<br><br>
+        Copyright (C) 2011 - 2014, Olivier Biot, Jason Oster, Aaron McLeod<br><br>
 		<a href="http://melonjs.org">melonJS</a> is an open source HTML5 game engine released under the <a rel="license" href="https://github.com/melonjs/melonJS/blob/master/MIT-LICENSE">MIT</a> License.<br>
        <br>
         <h2>Additional Credits</h2>
@@ -60,9 +60,9 @@
         <h2>Links</h2>
 			Please keep in mind that melonJS is still in beta stage !
 		   <table style="width:100%; border-spacing:0;">
-          <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS"></a><a href="https://github.com/melonjs/melonJS/blob/0.9.10/CHANGELOG">0.9.10</a></th><th></th></tr>
-          <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/0.9.10">zip</a> )</td></tr>
-          <tr><td>Build</td><td><a href="./build/melonJS-0.9.10-min.js">Production</a> <small>(109KB, Minified)</small> <br><br> <a href="./build/melonJS-0.9.10.js">Development</a> <small>(405KB, Uncompressed)</small></td></tr>
+          <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS"></a><a href="https://github.com/melonjs/melonJS/blob/0.9.11/CHANGELOG">0.9.11</a></th><th></th></tr>
+          <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/0.9.11">zip</a> )</td></tr>
+          <tr><td>Build</td><td><a href="./build/melonJS-0.9.11-min.js">Production</a> <small>(110KB, Minified)</small> <br><br> <a href="./build/melonJS-0.9.11.js">Development</a> <small>(421KB, Uncompressed)</small></td></tr>
           <tr><td>Documentation</td><td><a href="http://melonjs.github.io/docs/">Online documentation</a> ( <a href="https://github.com/melonjs/docs/archive/gh-pages.zip">zip</a> )</td></tr>
           <tr><td>Tutorial</td><td><a href="http://melonjs.github.io/tutorial/">A quick step by step game creation tutorial</a></td></tr>
           <tr><td>Tools</td><td><a href="http://www.mapeditor.org/">Tiled Map Editor</a></td></tr>
@@ -72,7 +72,7 @@
     </div>
      <div id="content_footer"></div>
     <div id="footer">
-      Copyright &copy; melonJS 2011 - 2013</a>
+      Copyright &copy; melonJS 2011 - 2014
     </div>
   </div>
 </body>
