--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-      Copyright &copy; melonJS 2011 - 2013</a>
+      Copyright &copy; melonJS 2011 - 2014
     </div>
   </div>
  <script type="text/javascript">
