Added Clumsy-Bird into the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -65,6 +65,18 @@
 
         <h2>Games</h2>
         
+        <h3><b>Clumsy Bird</b> by Ellison Leao </h3><span class="right"><a href="http://ellisonleao.github.io/clumsy-bird/"><img src="media/examples/clumsy-bird.png" alt="MS" /></a></span>
+
+        <p>
+           Clumsy Bird is a clone of the now world famous Flappy Bird, and created in only two days for studying purposes.
+           As the hype-ness on the Flappy Bird theme was growing, its author decided to host the code on Github, to give more visibility about how its easy to implement such a game.
+        </p>        
+            <i>"Clumsy Bird is the new open source Flappy Bird"</i> (<a href = "http://www.computerweekly.com/blogs/open-source-insider/2014/02/clumsy-bird-is-the-new-open-source-flappy-bird.html">ComputerWeekly.com</a>, Feb 2014)
+            <br><br><br>
+        <p>
+            Play it <a href="http://ellisonleao.github.io/clumsy-bird/"> here</a>, or click <a href="https://github.com/ellisonleao/clumsy-bird"> here</a> for more details on the Github page !
+        </p>
+        
         <h3><b>Psiral</b> by @petarov </h3><span class="right"><a href="http://psiral.herokuapp.com/"><img src="media/examples/psiral.png" alt="MS" /></a></span>
 
         <p>
