updated link to "chronicles of link" !:P

--- a/gallery.html
+++ b/gallery.html
@@ -467,7 +467,7 @@
         <h3><b>Chronicles of Link</b></h3><span class="right"><img src="media/examples/chronicles_of_link.png" alt="Chronicles of Link demo" /></span> A very nice WIP zelda remake/clone by Anthony Dietrich.
 
         <p><br />
-        You can visit his page <a href="http://icarus.cs.weber.edu/~ed20321/CS-4350/Medieval/index.html">here</a> to check it out, and/or for more information about the game progress and
+        You can visit his page <a href="http://linkclone.netai.net">here</a> to check it out, and/or for more information about the game progress and
         status.</p><br />
         <br />
         <br />
