--- a/download.html
+++ b/download.html
@@ -55,14 +55,15 @@
        <br>
         <h2>Additional Credits</h2>
         - MinPubSub : a micro publish/subscribe messaging framework available <a href=https://github.com/daniellmb/MinPubSub ">here</a><br>
-		- Tween JS : based on the original library available <a href="https://github.com/sole/Tween.js">here</a><br>
-        - Javascript Simple Inheritance : <a href="http://ejohn.org/">John Resig</a>
+		    - Tween JS : based on the original library available <a href="https://github.com/sole/Tween.js">here</a><br>
+        - Javascript Simple Inheritance : <a href="http://ejohn.org/">John Resig</a><br>
+        - Howler : a javascript audio library for the modern web.  <a href="http://howlerjs.com">http://howlerjs.com</a>
         <h2>Links</h2>
 			Please keep in mind that melonJS is still in beta stage !
 		   <table style="width:100%; border-spacing:0;">
-          <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS"></a><a href="https://github.com/melonjs/melonJS/blob/0.9.11/CHANGELOG">0.9.11</a></th><th></th></tr>
-          <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/0.9.11">zip</a> )</td></tr>
-          <tr><td>Build</td><td><a href="./build/melonJS-0.9.11-min.js">Production</a> <small>(110KB, Minified)</small> <br><br> <a href="./build/melonJS-0.9.11.js">Development</a> <small>(421KB, Uncompressed)</small></td></tr>
+          <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS"></a><a href="https://github.com/melonjs/melonJS/blob/1.0.0/CHANGELOG">1.0.0</a></th><th></th></tr>
+          <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/1.0.0">zip</a> )</td></tr>
+          <tr><td>Build</td><td><a href="./build/melonJS-1.0.0-min.js">Production</a> <small>(135KB, Minified)</small> <br><br> <a href="./build/melonJS-1.0.0.js">Development</a> <small>(597KB, Uncompressed)</small></td></tr>
           <tr><td>Documentation</td><td><a href="http://melonjs.github.io/docs/">Online documentation</a> ( <a href="https://github.com/melonjs/docs/archive/gh-pages.zip">zip</a> )</td></tr>
           <tr><td>Tutorial</td><td><a href="http://melonjs.github.io/tutorial/">A quick step by step game creation tutorial</a></td></tr>
           <tr><td>Tools</td><td><a href="http://www.mapeditor.org/">Tiled Map Editor</a></td></tr>
