--- a/gallery.html
+++ b/gallery.html
@@ -63,6 +63,18 @@
 
         <p>you'll find here below some links to games and demos using melonJS. If you want to share you work with the library, I will be very happy to add it to the below list</p>
         
+         <h3><b>Hairland</b> by Dadalab </h3><span class="right"><a href="http://www.carolbruguera.com/hairland/"><img src="media/examples/hairland.png" alt="MS" /></a></span>
+
+        <p>
+            Hairland is the first of a serie of "minigame" packs sponsored by a hairdressing company near Barcelona (though the game is by no means a game about cutting hair).
+            Hairland is a free game, developed both using melonJS and <a href="https://www.ludei.com/">CocoonJS</a> for deployment on both the appStore and Google Play ! (see links below) </p>        
+           <p>
+             Visit Developer's Website <a href="http://www.carolbruguera.com/hairland/"> here</a><br><br>
+             <a href="https://itunes.apple.com/es/app/hairland/id834885729?mt=8"><img src="media/store/button_ios.png" alt="appStore"/></a>
+             <a href="https://play.google.com/store/apps/details?id=com.dadalab.hairlandbycb"><img src="media/store/button_android.png" alt="Google Play"/></a>
+           </p>
+
+        
         <h3><b>Clumsy Bird</b> by Ellison Leao </h3><span class="right"><a href="http://ellisonleao.github.io/clumsy-bird/"><img src="media/examples/clumsy-bird.png" alt="MS" /></a></span>
 
         <p>
