--- a/gallery.html
+++ b/gallery.html
@@ -70,8 +70,8 @@
             Hairland is a free game, developed both using melonJS and <a href="https://www.ludei.com/">CocoonJS</a> for deployment on both the appStore and Google Play ! (see links below) </p>        
            <p>
              Visit Developer's Website <a href="http://www.carolbruguera.com/hairland/"> here</a><br><br>
-             <a href="https://itunes.apple.com/es/app/hairland/id834885729?mt=8"><img src="media/store/button_ios.png" alt="appStore"/></a>
-             <a href="https://play.google.com/store/apps/details?id=com.dadalab.hairlandbycb"><img src="media/store/button_android.png" alt="Google Play"/></a>
+             <a href="http://bit.ly/1qBTJaV"><img src="media/store/button_ios.png" alt="appStore"/></a>
+             <a href="http://bit.ly/1ikiB37"><img src="media/store/button_android.png" alt="Google Play"/></a>
            </p>
 
         
