links update following the renaming of the tutorial repository

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </ul>
 		<h3>Help</h3>
         <ul>
-		  <li><a href="http://melonjs.github.io/tutorial/">Step by Step Tutorial</a></li>
+		  <li><a href="http://melonjs.github.io/tutorial-platformer/">Step by Step Tutorial</a></li>
           <li><a href="http://melonjs.github.io/docs/">Online Documentation</a></li>
 		  <li><a href="http://groups.google.com/group/melonjs">Google Group</a></li>
 		</ul>
