--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -1,7 +1,7 @@
 <head>
 <script type="text/javascript">
 <!--
-   window.location="http://melonjs.github.io/tutorial";
+   window.location="http://melonjs.github.io/tutorial-platformer";
 //-->
 </script>
 </head>
