--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <a href="https://github.com/melonjs/melonjs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
 		<div class="sidebar">
 		 <p>
-		   <img src="media/HTML5_Badge_128.png"/><br>
+		   <img src="media/icons/HTML5_Badge_128.png"/><br>
 		 </p>
 		 <h3>Useful Links</h3>
         <ul>
@@ -92,7 +92,6 @@
 		  free and standalone library was available to develop games. And although still a work in progress, melonJS already allows to easily create some nice games (see the <a href="gallery.html">Gallery</a> page)</p>
 		  <h2>Powerful level design through Tiled</h2>
 		  <p>melonJS integrates the popular Tiled map format, allowing to easily design levels using the <a href="http://www.mapeditor.org/">Tiled map editor</a>, and to focus on the game features itself.</p>
-		  	<!--<img src="media/tiled-browser.png" alt="Tiled and Browser Integration" /> -->
 			<div class="slider-wrapper theme-default">
 				<div id="slider" class="nivoSlider">
 					<img src="media/carousel/alex4.png" alt="" title="Fast and Powerful level design through Tiled" />
@@ -151,7 +150,7 @@
 			 <li>some basic GUI elements</li>
 			 <li>a customizable loader, etc. . .</li>
         </ul>
-		  <span class="right"><img src="media/browser_icons.png" alt="browser icons example" /></span>
+		  <span class="right"><img src="media/icons/browser_icons.png" alt="browser icons example" /></span>
 		  </p>
 		  <h2>Browser Compatibility</h2>
         <p>See below about melonJS and compatibility with the various existing browsers.</p>
