fixed links to the tutorial (thanks Gabriel!)

--- a/gallery.html
+++ b/gallery.html
@@ -532,9 +532,9 @@
 
         <p>A simple platformer demo, designed during the creation of the melonJS step by step game creation tutorial :</p>
 
-        <p>Demo is available online <a href="http://melonjs.github.io/tutorial/tutorial_final/index.html">here</a>.</p>
+        <p>Demo is available online <a href="http://melonjs.github.io/tutorial-platformer/tutorial_final/index.html">here</a>.</p>
 
-        <p>Or you can also check <a href="http://melonjs.github.io/tutorial/index.html">here</a> for the Tutorial itself.</p><br />
+        <p>Or you can also check <a href="http://melonjs.github.io/tutorial-platformer/index.html">here</a> for the Tutorial itself.</p><br />
         <br />
         <br />
         <br />
