--- a/download.html
+++ b/download.html
@@ -65,7 +65,7 @@
           <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/1.0.2">zip</a> )</td></tr>
           <tr><td>Build</td><td><a href="https://github.com/melonjs/melonJS/releases/download/1.0.2/melonJS-1.0.2-min.js">Production</a> <small>(136KB, Minified)</small> <br><br> <a href="https://github.com/melonjs/melonJS/releases/download/1.0.2/melonJS-1.0.2.js">Development</a> <small>(621KB, Uncompressed)</small></td></tr>
           <tr><td>Documentation</td><td><a href="http://melonjs.github.io/docs/">Online documentation</a> ( <a href="https://github.com/melonjs/docs/archive/gh-pages.zip">zip</a> )</td></tr>
-          <tr><td>Tutorial</td><td><a href="http://melonjs.github.io/tutorial/">A quick step by step game creation tutorial</a></td></tr>
+          <tr><td>Tutorial</td><td><a href="http://melonjs.github.io/tutorial-platformer/">A quick step by step game creation tutorial</a></td></tr>
           <tr><td>Tools</td><td><a href="http://www.mapeditor.org/">Tiled Map Editor</a></td></tr>
         </table>
 
