enabled the embedded page link on other pages

--- a/forum.html
+++ b/forum.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
- <title>melonJS - Download</title>
+ <title>melonJS - Forum</title>
   <meta name="description" content="melonJS - A lightweight HTML5 game engine" />
   <meta name="keywords" content="HTML5, javascript, lightweight, canvas, game, engine, framework, tiled, tile, map, loader, parser, TMX, XML" />
   <meta charset="utf-8">
@@ -51,7 +51,7 @@
             src="javascript:void(0)"
             scrolling="no"
             frameborder="0"
-            width="900"
+            width="800"
             height="700">
         </iframe>
 
