--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
           <li><a href="http://blog.melonjs.org/">Blog</a></li>
           <li class="selected"><a href="gallery.html">Gallery</a></li>
           <li><a href="download.html">Download</a></li>
-          <li><a href="http://forum.melonjs.org">Forum</a></li>
+          <li><a href="forum.html">Forum</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
