--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li><a href="http://blog.melonjs.org/">Blog</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="download.html">Download</a></li>
-		  <li><a href="http://forum.melonjs.org">Forum</a></li>
+		  <li><a href="forum.html">Forum</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
