--- a/download.html
+++ b/download.html
@@ -54,16 +54,15 @@
 		<a href="http://melonjs.org">melonJS</a> is an open source HTML5 game engine released under the <a rel="license" href="https://github.com/melonjs/melonJS/blob/master/MIT-LICENSE">MIT</a> License.<br>
        <br>
         <h2>Additional Credits</h2>
-        - MinPubSub : a micro publish/subscribe messaging framework available <a href=https://github.com/daniellmb/MinPubSub ">here</a><br>
-		    - Tween JS : based on the original library available <a href="https://github.com/sole/Tween.js">here</a><br>
-        - Javascript Simple Inheritance : <a href="http://ejohn.org/">John Resig</a><br>
-        - Howler : a javascript audio library for the modern web.  <a href="http://howlerjs.com">http://howlerjs.com</a>
+        - <a href="https://github.com/daniellmb/MinPubSub">MinPubSub</a> : a micro publish/subscribe messaging framework available<br>
+		- <a href="https://github.com/sole/Tween.js">Tween JS</a> : a javaScript tweening engine for easy animations<br>
+        - <a href="https://github.com/parasyte/jay-inheritance">Jay Inheritance</a> : a super fast prototypal inheritance microlib for the modern web<br>
+        - <a href="http://howlerjs.com">Howler</a> : a javascript audio library for the modern web.<br>
         <h2>Links</h2>
-			Please keep in mind that melonJS is still in beta stage !
-		   <table style="width:100%; border-spacing:0;">
-          <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS"></a><a href="https://github.com/melonjs/melonJS/releases/tag/1.0.2">1.0.2</a></th><th></th></tr>
-          <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/1.0.2">zip</a> )</td></tr>
-          <tr><td>Build</td><td><a href="https://github.com/melonjs/melonJS/releases/download/1.0.2/melonJS-1.0.2-min.js">Production</a> <small>(136KB, Minified)</small> <br><br> <a href="https://github.com/melonjs/melonJS/releases/download/1.0.2/melonJS-1.0.2.js">Development</a> <small>(621KB, Uncompressed)</small></td></tr>
+		<table style="width:100%; border-spacing:0;">
+          <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS/releases/tag/1.1.0">1.1.0</a></th><th></th></tr>
+          <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS/tree/1.1.x">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/1.1.x">zip</a> )</td></tr>
+          <tr><td>Build</td><td><a href="https://github.com/melonjs/melonJS/releases/download/1.1.0/melonJS-1.1.0-min.js">Production</a> <small>(184KB, Minified)</small> <br><br> <a href="https://github.com/melonjs/melonJS/releases/download/1.1.0/melonJS-1.1.0.js">Development</a> <small>(741KB, Uncompressed)</small></td></tr>
           <tr><td>Documentation</td><td><a href="http://melonjs.github.io/docs/">Online documentation</a> ( <a href="https://github.com/melonjs/docs/archive/gh-pages.zip">zip</a> )</td></tr>
           <tr><td>Tutorial</td><td><a href="http://melonjs.github.io/tutorial-platformer/">A quick step by step game creation tutorial</a></td></tr>
           <tr><td>Tools</td><td><a href="http://www.mapeditor.org/">Tiled Map Editor</a></td></tr>
