--- a/index.html
+++ b/index.html
@@ -109,22 +109,23 @@
             </div>
 			
            </div>
-		  <p>Along necessary bug fixing, some other nice features are still to come, so please come back regulary !</p>
 		  <h2>Free and open-source</h2>
 			melonJS is an open-source HTML5 based community game engine, released under the MIT license, that you can <a href="https://github.com/melonjs/melonJS">join</a>, but that you can also modify or extend in any way to fit your needs.
 		  <h2>Feature list :</h2>
 		  <ul>
           <li>A fresh and lightweight 2D sprite-based engine</li>
           <li>Standalone library (does not rely on anything else, except a HTML5 capable browser)</li>
-          <li>Compatible with all major browsers (Chrome, Safari, Firefox, Opera, IE)</li>
-          <li>Multiple Audio Channel support</li>
-		  <li>Basic physics and collision mechanisms (to ensure low cpu requirements)</li>
-		  <li>A basic set of Object Entities (to be extended)</li>
-		  <li>Basic Vector Math</li>
+          <li>Compatible with all major browsers (Chrome, Safari, Firefox, Opera, IE) and mobile devices</li>
+          <li>Multi-channel HTML5 audio support and Web Audio on supported devices</li>
+		  <li>a lightweight physic implementation to ensure low cpu requirements</li>
+          <li>Polygon (SAT) based collision algorithm for accurate detection and response</li>
+          <li>Fast broad-phase collision detection using spatial partitioning</li>
+		  <li>advanced math API for Vector and Matrix</li>
 		  <li>Tween effects</li>
 		  <li>Transition effects</li>
 		  <li>A basic set of Object Entities (to be extended)</li>
 		  <li>Object Pooling</li>
+          <li>Basic Particle System</li>
 		  <li>Basic animation management</li>
 		  <li>Standard spritesheet and Packed Textures (Texture Packer) support</li>
 		  <li>A state manager (to easily manage loading, menu, options or in-game screen state and switch)</li>
@@ -137,6 +138,7 @@
 				<li>Multiple Tileset support</li>
 				<li>Tileset Transparency settings</li>
 				<li>Layers Alpha settings</li>
+                <li>Rectangle, Ellipse, Polygon and Polyline objects support</li>
 				<li>Tiled Object</li>
 				<li>Flipped & rotated Tiles</li>
 				<li>Dynamic Layer and Object/Group ordering</li>
@@ -146,7 +148,9 @@
 			 </li>
 			 <li>System and Bitmap fonts</li>
 			 <li>Mouse and Touch device support</li>
-			 <li>Mouse emulation on touch devices</li>
+			 <li>Mouse emulation on touch devices (with mouse emulation)</li>
+             <li>Device motion & accelerometer support</li>
+             <li>High DPI & auto scaling</li>
 			 <li>Built-in support for CocoonJS</li>
 			 <li>Asynchronous messaging support (minPubSub)</li>
 			 <li>some basic GUI elements</li>
