updated/added support links

--- a/contact.html
+++ b/contact.html
@@ -48,13 +48,17 @@
       <div id="content">
         <!-- insert the page content here -->
         <h1>Contact Us</h1>
-		  <p></p>
-		  <p></p>
-        <p>For general, non technical, inquiries about melonJS, you can contact us through the following address : <a href="mailto:contact@melonjs.org">contact@melonjs.org</a></p>
-		  <p></p>
+		<p>
+        If you need technical support, you can contact us through the following channels :
+        <ul>
+           <li>melonJS <a href="http://www.melonjs.org/forum">developer forum</a></li>
+           <li>gitter <a href="https://gitter.im/melonjs/public">web chat</a></li>
+           <li>#melonjs on freenode.net (also available via <a href="http://webchat.freenode.net/?channels=melonjs">webchat</a>)</li>
+        </ul>
+        For other general, non technical inquiries about melonJS, you can contact us through the following address : <a href="mailto:contact@melonjs.org">contact@melonjs.org</a></p>
 		<h1>Donation</h1>
 		  <p>
-		  As you might know melonJS is open source and free for everybody to use, and all development and support is mainly done during our sparetime. While I do not want anybody to donate in exchange for anything, potential donations by grateful users are however welcome and will be used to cover the cost of maintaining this website, related resources, and maybe some useful hardware for testing.
+		  melonJS is a open source project and free for everybody to use, and all development and support is mainly done during our sparetime. While we do not want anybody to donate in exchange for anything, potential donations by grateful users are however welcome and will be used to cover the cost of maintaining this website, related resources, and maybe some useful hardware for testing.
 		  <center>
 			<table border="0">
 			<tr>
