--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
 			<li><a href="http://www.marketjs.com/">marketJS</a></li>
 			<li><a href="http://clay.io/">clay.io</a></li>
         </ul>
-		<h3>Help</h3>
+		<h3>Support</h3>
         <ul>
 		  <li><a href="http://melonjs.github.io/tutorial-platformer/">Step by Step Tutorial</a></li>
           <li><a href="http://melonjs.github.io/docs/">Online Documentation</a></li>
-		  <li><a href="http://groups.google.com/group/melonjs">Google Group</a></li>
+          <li><a href="https://github.com/melonjs/melonJS/wiki">Wiki Page</a></li>
+		  <li><a href="http://www.melonjs.org/forum">Developer Forum</a></li>
 		</ul>
       	<h3>Contributing</h3>
         <ul>
