--- a/download.html
+++ b/download.html
@@ -54,10 +54,13 @@
 		<a href="http://melonjs.org">melonJS</a> is an open source HTML5 game engine released under the <a rel="license" href="https://github.com/melonjs/melonJS/blob/master/MIT-LICENSE">MIT</a> License.<br>
        <br>
         <h2>Additional Credits</h2>
-        - <a href="https://github.com/daniellmb/MinPubSub">MinPubSub</a> : a micro publish/subscribe messaging framework available<br>
-		- <a href="https://github.com/sole/Tween.js">Tween JS</a> : a javaScript tweening engine for easy animations<br>
-        - <a href="https://github.com/parasyte/jay-inheritance">Jay Inheritance</a> : a super fast prototypal inheritance microlib for the modern web<br>
-        - <a href="http://howlerjs.com">Howler</a> : a javascript audio library for the modern web.<br>
+        melonJS uses part of, or a derivated version of the following libraries :<br><br>
+        - <a href="https://github.com/daniellmb/MinPubSub">MinPubSub</a>: a micro publish/subscribe messaging framework available (MIT License)<br>
+		- <a href="https://github.com/sole/Tween.js">Tween JS</a>: a javaScript tweening engine for easy animations (MIT License)<br>
+        - <a href="https://github.com/parasyte/jay-inheritance">Jay Inheritance</a>: a super fast prototypal inheritance microlib for the modern web (MIT License)<br>
+        - <a href="http://howlerjs.com">Howler</a>: a javascript audio library for the modern web  (MIT License)<br>
+        - <a href="https://github.com/jriecken/sat-js">SAT.js</a>: a javascript Separating Axis Theorem implementation library by Jim Riecken (MIT License)<br>
+        - <a href="https://github.com/timohausmann/quadtree-js/">quadtree-js</a>: a QuadTree implementation in JavaScript by Timo Hausmann (MIT License)<br>
         <h2>Links</h2>
 		<table style="width:100%; border-spacing:0;">
           <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS/releases/tag/1.1.0">1.1.0</a></th><th></th></tr>
