website update with the 2.0.0 download links

--- a/index.html
+++ b/index.html
@@ -133,9 +133,8 @@
 		  <li>Tiled map format version +0.9.x integration for easy level design :
 		 	<ul>
 				<li>Uncompressed Plain, Base64, CSV and JSON encoded XML tilemap loading</li>
-				<li>Orthogonal tilemap with built-in collision management
-				<li>Isometric, Perspective tilemap support</li>
-				<li>Multiple layers (multiple background/Foreground, collision and Image layers)</li>
+                <li>Orthogonal, Isometric and Perspective tilemap support</li>
+                <li>Multiple layers (multiple background/Foreground, collision and Image layers)</li>
 				<li>Multiple Tileset support</li>
 				<li>Tileset Transparency settings</li>
 				<li>Layers Alpha settings</li>
@@ -143,13 +142,12 @@
 				<li>Tiled Object</li>
 				<li>Flipped & rotated Tiles</li>
 				<li>Dynamic Layer and Object/Group ordering</li>
-				<li>Dynamic Entity loading (melonJS will instantiate JS object matching the object property name defined in the tilemap)</li>
-				<li>Solid, Platform, Slope and Breakable Tiles</li>
+				<li>Dynamic Entity loading</li>
+				<li>Shape based Tile collision support</li>
 				</ul>
 			 </li>
 			 <li>System and Bitmap fonts</li>
-			 <li>Mouse and Touch device support</li>
-			 <li>Mouse emulation on touch devices (with mouse emulation)</li>
+			 <li>Mouse and Touch device support (with mouse emulation)</li>
              <li>Device motion & accelerometer support</li>
              <li>High DPI & auto scaling</li>
 			 <li>Built-in support for CocoonJS</li>
