--- a/gallery.html
+++ b/gallery.html
@@ -63,6 +63,16 @@
 
         <p>you'll find here below some links to games and demos using melonJS. If you want to share you work with the library, I will be very happy to add it to the below list</p>
 
+       <h3><b>Peter Acorn</b> by #Fellows </h3><span class="right"><a href="http://sharpfellows.com/page/peteracorn"><img src="media/examples/peteracorn.png" alt="MS" /></a></span>
+
+        <p>
+            Join in and help Peter escape from the clutches of his arch enemy Jack Gnash. Gain speed by dodging obstacles and use Peters tuxedo to glide between platforms. Use the PeterCopter mode to fly across canyons taking care to avoid collisions.
+        </p>
+        <p>
+             <a href="https://itunes.apple.com/us/app/peter-acorn/id920395272?ls=1&mt=8"><img src="media/store/button_ios.png" alt="appStore"/></a>
+             <a href="https://play.google.com/store/apps/details?id=com.sharpfellows.peteracorn&hl=en_GB"><img src="media/store/button_android.png" alt="Google Play"/></a>
+        </p>
+
         <h3><b>Pipe Animus</b> by falldeaf </h3><span class="right"><a href="http://pipeanimus.falldeaf.com"><img src="media/examples/pipe_animus.png" alt="MS" /></a></span>
 
         <p>
@@ -88,7 +98,7 @@
            <p>
              Play it online <a href="http://www.ffx.it/games/jellyInvaders/index_notMobile.html"> here</a>, or click <a href="http://ffx.it"> here</a> for the developer website and more information about Officine Pixel and their other games! <br><br>
              <a href="https://itunes.apple.com/us/app/jelly-invaders-from-outer/id910858515?l=it&ls=1&mt=8"><img src="media/store/button_ios.png" alt="appStore"/></a>
-             <a href="https://play.google.com/store/apps/details?id=it.ffx.jellyinvaders"><img src="media/store/button_android.png" alt="Google Play"/>
+             <a href="https://play.google.com/store/apps/details?id=it.ffx.jellyinvaders"><img src="media/store/button_android.png" alt="Google Play"/></a>
              <a href="http://www.amazon.com/Officine-Pixel-Jelly-Invaders/dp/B00O4CPM4O"><img src="media/store/button_amazon.png" alt="Amazon"/></a>
            </p>
            <br>
