Add Developer Chat link to side nav

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           <li><a href="http://melonjs.github.io/docs/">Online Documentation</a></li>
           <li><a href="https://github.com/melonjs/melonJS/wiki">Wiki Page</a></li>
 		  <li><a href="http://www.melonjs.org/forum">Developer Forum</a></li>
+		  <li><a href="https://gitter.im/melonjs/public">Developer Chat</a></li>
 		</ul>
       	<h3>Contributing</h3>
         <ul>
@@ -89,7 +90,7 @@
       <div id="content">
         <!-- insert the page content here -->
 		<h2>Fresh & lightweight</h2>
-        <p>melonJS is the result of our enthusiasm and past experiments with Javascript, and came from the feeling that no simple, 
+        <p>melonJS is the result of our enthusiasm and past experiments with Javascript, and came from the feeling that no simple,
 		  free and standalone library was available to develop games. And although still a work in progress, melonJS already allows to easily create some nice games (see the <a href="gallery.html">Gallery</a> page)</p>
 		  <h2>Powerful level design through Tiled</h2>
 		  <p>melonJS integrates the popular Tiled map format, allowing to easily design levels using the <a href="http://www.mapeditor.org/">Tiled map editor</a>, and to focus on the game features itself.</p>
@@ -108,7 +109,7 @@
 			<div id="neverwell_moor" class="nivo-html-caption">
                 Neverwell Moor - a game built in 3 weeks as part of <a href="http://lpc.opengameart.org/">the Liberated Pixel Cup 2012</a> competition, using melonJS and Chipmunk-js.
             </div>
-			
+
            </div>
 		  <h2>Free and open-source</h2>
 			melonJS is an open-source HTML5 based community game engine, released under the MIT license, that you can <a href="https://github.com/melonjs/melonJS">join</a>, but that you can also modify or extend in any way to fit your needs.
