added bad company party into the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -62,8 +62,20 @@
         <h2>melonJS games and demos</h2>
 
         <p>you'll find here below some links to games and demos using melonJS. If you want to share you work with the library, I will be very happy to add it to the below list</p>
+        
+        <h3><b>Bad Company Party</b> by Michael Wilson (Ponywolf) </h3><span class="right"><a href="http://www.badcompanyparty.com/"><img src="media/examples/bad-company-party.gif" alt="MS" /></a></span>
 
-       <h3><b>Peter Acorn</b> by #Fellows </h3><span class="right"><a href="http://sharpfellows.com/page/peteracorn"><img src="media/examples/peteracorn.png" alt="MS" /></a></span>
+        <p>
+             A pixel platformer holiday card, released by Ponywolf as season greetings for their parent company (Drake Coooper).
+        </p>
+        <p>
+            Play it <a href="http://www.badcompanyparty.com/"> here</a>, see <a href="https://groups.google.com/forum/#!topic/melonjs/KiY4uwfTXHY"> here</a> for more information on the forum related anouncement, or click <a href="https://github.com/ponywolf/badholidayparty"> here</a> for the source code on the Github page !
+        </p>
+        <p>
+        Worth noting that each time the game was shared (until Dec 31st, 2014), $1 was donated to the Idaho Food Bank (up to total donation of a $1000)
+        </p>
+        
+        <h3><b>Peter Acorn</b> by #Fellows </h3><span class="right"><a href="http://sharpfellows.com/page/peteracorn"><img src="media/examples/peteracorn.png" alt="MS" /></a></span>
 
         <p>
             Join in and help Peter escape from the clutches of his arch enemy Jack Gnash. Gain speed by dodging obstacles and use Peters tuxedo to glide between platforms. Use the PeterCopter mode to fly across canyons taking care to avoid collisions.
